Python/Open Camera, Grab Image to OpenCV/tisgrabber.h


typedef struct HGRABBER_t__ { int unused; } HGRABBER_t; 
#define	HGRABBER HGRABBER_t* 
typedef struct HFRAMEFILTER_t__
{
	void *pFilter;
	int bHasDialog;
	int ParameterCount;
	FILTERPARAMETER_t *Parameters;
} HFRAMEFILTER_t;
#define HFRAMEFILTER HFRAMEFILTER_t
#define IC_SUCCESS   1		
#define IC_ERROR     0		
#define IC_NO_HANDLE -1		
#define IC_NO_DEVICE -2     
#define IC_NOT_AVAILABLE -3     
#define IC_NO_PROPERTYSET -3     
#define IC_DEFAULT_WINDOW_SIZE_SET -3     
#define IC_NOT_IN_LIVEMODE -3 
#define IC_PROPERTY_ITEM_NOT_AVAILABLE -4 
#define IC_PROPERTY_ELEMENT_NOT_AVAILABLE -5 
#define IC_PROPERTY_ELEMENT_WRONG_INTERFACE -6 
#define IC_INDEX_OUT_OF_RANGE -7 
#define IC_WRONG_XML_FORMAT -1
#define IC_WRONG_INCOMPATIBLE_XML -3
#define IC_NOT_ALL_PROPERTIES_RESTORED -4
#define IC_DEVICE_NOT_FOUND -5
#define IC_FILE_NOT_FOUND 35
HGRABBER AC IC_CreateGrabber();
void AC IC_ReleaseGrabber( HGRABBER *hGrabber ); 
char* AC IC_GetDeviceName(HGRABBER hGrabber ); 
int AC IC_GetImageDescription( HGRABBER hGrabber, long *lWidth, long *lHeight, int *iBitsPerPixel, COLORFORMAT *format );
unsigned char* AC IC_GetImagePtr( HGRABBER hGrabber ); 
int AC IC_SetHWnd( HGRABBER hGrabber, __HWND hWnd ); 
char* AC IC_GetDevice( int iIndex ); 
char* AC IC_GetUniqueNamefromList( int iIndex );
int AC IC_SaveDeviceStateToFile(HGRABBER hGrabber, char* szFileName);
HGRABBER AC IC_LoadDeviceStateFromFile(HGRABBER hGrabber, char* szFileName); 
int AC IC_IsDevValid( HGRABBER hGrabber); 
HGRABBER AC IC_ShowDeviceSelectionDialog( HGRABBER hGrabber ); 
typedef void (*FRAME_READY_CALLBACK)
	(HGRABBER hGrabber, unsigned char* pData, unsigned long frameNumber, void* );
typedef void (*DEVICE_LOST_CALLBACK)(HGRABBER hGrabber, void* );
int AC IC_SetFrameReadyCallback(
	HGRABBER				hGrabber,
	FRAME_READY_CALLBACK	cb,
	void*					x1_argument_in_void_userdata);
int AC IC_SetCallbacks(
	HGRABBER				hGrabber,
	FRAME_READY_CALLBACK	cb,
	void*					x1_argument_in_void_userdata,
	DEVICE_LOST_CALLBACK	dlCB,
	void*					x2_argument_in_void_userdata);
int AC IC_GetPropertyValueRange(HGRABBER hGrabber, char* Property, char *Element, int *Min, int *Max );
int AC IC_GetPropertyValue(HGRABBER hGrabber, char* Property, char *Element, int *Value );
int AC IC_GetPropertyAbsoluteValueRange(HGRABBER hGrabber, char* Property, char *Element, float *Min, float *Max );
int AC IC_GetPropertyAbsoluteValue(HGRABBER hGrabber, char* Property, char *Element, float *Value );
int AC IC_GetPropertySwitch(HGRABBER hGrabber, char* Property, char *Element, int *On );
int AC IC_CreateFrameFilter(char *szFilterName, HFRAMEFILTER *FilterHandle );
typedef struct CODECHANDLE_t__ { int unused; } CODECHANDLE_t; 
#define	HCODEC CODECHANDLE_t* 
typedef int  _cdecl ENUMCODECCB( char* CodecName, void*);
void AC IC_enumCodecs(ENUMCODECCB cb, void* data);
HCODEC IC_Codec_Create(char* Name);